# OpenBench

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.orchestrator/: state.json
.orchestrator/prompts/: task_1.md  task_2.md  task_3.md  task_5.md  task_7.md
docs/: architecture.md  conf.py  index.rst
docs/api/: index.rst  openbench.backends.keysight_backend.rst  openbench.backends.rigol_backend.rst  openbench.backends.rst  openbench.backends.sr860_backend.rst  openbench.backends.tektronix_backend.rst  openbench.backends.virtualbench_backend.rst  openbench.core.experiment.rst  openbench.core.interfaces.rst  openbench.core.orchestrator.rst  openbench.core.rst  openbench.core.session.rst  openbench.data.plotter.rst  openbench.data.recorder.rst  openbench.data.rst  openbench.experiments.chua_admittance.rst  openbench.experiments.component_char.rst  openbench.experiments.dc_sweep.rst  openbench.experiments.filter_design_experiment.rst  openbench.experiments.frequency_sweep.rst  openbench.experiments.impedance_sweep.rst  openbench.experiments.rst  openbench.filters.design.rst  openbench.filters.rst  openbench.filters.topologies.rst  openbench.filters.validation.rst  openbench.gui.app.rst  openbench.gui.main.rst  (+23 more)
examples/: chua_lab_workflow.py
openbench/: __init__.py
tests/: test_api_docs.py  test_changelog.py  test_chua_admittance_sweep.py  test_chua_e2e_simulation.py  test_chua_lab_workflow.py  test_dashboard_panel.py  test_data_export.py  test_data_plotter.py  test_data_recorder.py  test_experiment.py  test_filter_design_experiment.py  test_filter_design_panel.py  test_filters.py  test_gui_main_window.py  test_gui_theme.py  test_inductor_characterization.py  test_instrument_interface.py  test_instrument_setup_panel.py  test_interfaces_extended.py  test_keysight_backend.py  test_live_plot_panel.py  test_orchestrator.py  test_package_structure.py  test_rigol_backend.py  test_session.py  test_session_history_panel.py  test_sr860_backend.py  test_tc4069ubp_characterization.py  test_tektronix_backend.py  test_virtualbench_backend.py
(+50 files in other folders)
